cirros/single/policies/verified/deny_access_single_resourse.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector:
    matchLabels:
      kubevirt.io/domain: testvm3
  policyTypes:
  - Ingress
