cirros/single/policies/verified/deny_external_namespace_for_specific_instance.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace-instance
spec:
  podSelector:
    matchLabels:
      kubevirt.io/domain: testvm
  ingress:
    - from:
        - podSelector: {}
